--- a/client/partials/AppNav.html
+++ b/client/partials/AppNav.html
@@ -5,7 +5,7 @@
       <li><a href="/maps"><i class="fa fa-map" aria-hidden="true"></i><span>Maps</span></a></li>
       <li><a href="/Incidents"><i class="fa fa-heartbeat" aria-hidden="true"></i><span>Incidents</span></a></li>
       <li><a href="/users"><i class="fa fa-users"></i> <span>Users Management</span></a></li>
-      <li><a href="/rescue"><i class="fa fa-car" aria-hidden="true"></i><span>Rescue Team</span></a></li>
+      <!-- <li><a href="/rescue"><i class="fa fa-car" aria-hidden="true"></i><span>Rescue Team</span></a></li> -->
       <li class="logout"><a href="#"><i class="fa fa-sign-out"></i><span>Signout</span></a></li>
     </ul>
   </div>
