--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,17 +1,23 @@
 <template name="Header">
-    <header class="header fixed-top">
-      {{#unless currentUser}}
-        <h2 class="site-title"><a href="/">Emegency Response Hub</a></h2>
-      {{else}}
-        {{#unless isInRole 'Admin'}}
-          <h2 class="site-title">ERH</h2>
-          <h6 class="site-title">{{currentUser.profile.lname}}, {{currentUser.profile.fname}}</h6>
-          <h6 class="site-title logout"><a href="#"><i class="fa fa-sign-out"></i><span>Signout</span></a></h6>
-        {{else}}
-          <h2 class="site-title"><a href="/dashboard">Emegency Response Hub</a></h2>
-          <h4 class="site-title">{{currentUser.profile.lname}}, {{currentUser.profile.fname}}</h4>
-        {{/unless}}
-          <!-- {{currentUser.roles.[0]}} -->
-      {{/unless}}
-    </header>
+  <header class="header fixed-top">
+    {{#unless currentUser}}
+    <h4 class="site-title"><a href="/">Emergency Response Decision Support System for the Province of Pangasinan</a>
+    </h4>
+    {{else}}
+    {{#unless isInRole 'Admin'}}
+    <h2 class="site-title">ERH</h2>
+    <h6 class="site-title">{{currentUser.profile.lname}}, {{currentUser.profile.fname}}</h6>
+    <h6 class="site-title logout"><a href="#"><i class="fa fa-sign-out"></i><span>Signout</span></a></h6>
+    {{else}}
+    <h4 class="site-title p-1">
+      <a href="/dashboard">
+        <img src="/logo.png" height="32px" width="32px" alt="ipanema">
+        Emergency Response Hub
+      </a>
+    </h4>
+    <h4 class="site-title">{{currentUser.profile.lname}}, {{currentUser.profile.fname}}</h4>
+    {{/unless}}
+    <!-- {{currentUser.roles.[0]}} -->
+    {{/unless}}
+  </header>
 </template>
