--- a/style.scss
+++ b/style.scss
@@ -122,7 +122,7 @@ input[type="password"] {
     color: $text;
     position: relative;
     z-index: 10;
-    height: 60px;
+    height: 55px;
     padding: 5px 5%;
     display: flex;
     justify-content: space-between;
@@ -216,7 +216,7 @@ input[type="password"] {
         &:hover {
             color: #FFF;
             border-color: $action;
-            background: $nav - 20;
+            background: #ffc107;
         }
     }
     ul {
@@ -245,7 +245,7 @@ table {
     }
     th {
         text-transform: uppercase;
-        background: $dblue;
+        background: #985321;
         color: #fff;
     }
     &.edit-mode {
