--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,11 +1,11 @@
 <template name="Header">
   <header class="header fixed-top">
     {{#unless currentUser}}
-    <h4 class="site-title"><a href="/">ERDSS for the Province of Pangasinan</a>
+    <h4 class="site-title"><a href="/">ERDSS</a>
     </h4>
     {{else}}
     {{#unless isInRole 'Admin'}}
-    <h2 class="site-title">ERH</h2>
+    <h2 class="site-title">ERDSS</h2>
     <h6 class="site-title">{{currentUser.profile.fname}}</h6>
     <h6 class="site-title logout"><a href="#"><i class="fa fa-sign-out"></i><span>Signout</span></a></h6>
     {{else}}
